fix date picker showing up behind #main, closes: #7025
test plan:
* Navigate to quiz, edit
* Click the calendar in the due date field
* make sure datepicker pops up so you can see it,
  and is not hidden behind other elements

Reviewed-on: https://gerrit.instructure.com/8983
Tested-by: Hudson <hudson@instructure.com>

--- a/app/stylesheets/base/_#right-side.sass
+++ b/app/stylesheets/base/_#right-side.sass
@@ -13,8 +13,8 @@
   +border-bottom-left-radius(5px)
   color: $right_side_text_color
   min-height: 20px
-  z-index: 3
-  
+  z-index: 10 // puts it equal with #main, used so datepickers that pop up from #right-side pop up on top
+
   hr
     border: dotted #aaa
     border-width: 1px 0 0
